# simple-llm

./: .gitignore  LICENSE  README.md  pyproject.toml
data/corpus/: corpus.txt
data/tokenizer/: bpe_tokenizer.json
data/tokens/: corpus_tokens.pkl
doc/: bpe_algorithm.drawio  bpe_algorithm.md  decoder_ru.md  feed_forward_ru.md  get_data_documentation_ru.md  gpt-history.md  gpt_documentation_ru.md  head_attention_ru.md  index.md  multi_head_attention_ru.md  positional_embeddings_ru.md  token_embeddings_flow.drawio  token_embeddings_ru.md  train_on_custom_data_ru.md
example/: decoder_example.py  example_bpe.py  example_get_data.py  example_gpt.py  example_token_embeddings.py  feed_forward_example.py  generate_text.py  head_attention_example.py  multi_head_attention_example.py  tokenize_corpus.py  train_gpt_example.py  train_gpt_model.py  train_tokenizer.py
simple_llm/data/: get_data.py
simple_llm/embedding/: positional_embeddings.py  token_embeddings.py
simple_llm/tokenizer/: bpe.py  bpe_interface.py  optimize_bpe.py  simple_bpe.py
simple_llm/transformer/: decoder.py  feed_forward.py  gpt.py  head_attention.py  multi_head_attention.py
simple_llm/transformer/callback/: __init__.py  callback.py  early_stopping_callback.py  (+2 more)
tests/: conftest.py  test_bpe.py  test_bpe_detailed.py  test_decoder.py  test_feed_forward.py  test_get_data.py  test_gpt.py  test_gpt_save_load.py  test_gpt_training.py  test_head_attention.py  test_multi_head_attention.py  test_positional_embeddings.py  test_token_embeddings.py
tests/integration/: test_bpe_integration.py
